--- a/client/css/pages/_home.scss
+++ b/client/css/pages/_home.scss
@@ -1,5 +1,5 @@
 .homepage-hero {
-    background: url(../assets/img/mean-seed-hero-bg.jpg) #2d6f4f repeat;
+    background: #074e68;
     padding: 2rem 1rem;
     position: relative;
 }
@@ -12,7 +12,7 @@
 }
 
 .homepage-hero h2 {
-    color: #CCC;
+    color: #FFF;
     text-align: left;
     font-size: 1.4rem;
     font-weight: 400;
@@ -57,12 +57,4 @@
         height: 100%;
 
     }
-}
-
-@media #{$large-up} {
-
-    .homepage-hero {
-        height: 500px;
-    }
-
 }
