--- a/client/css/modules/_menus.scss
+++ b/client/css/modules/_menus.scss
@@ -1,5 +1,15 @@
 .off-canvas-menu {
     height: 100%;
-    width: 270px;
+    width: 100%;
     background-color: #333;
+}
+
+.off-canvas-menu ul {
+    list-style: none;
+}
+
+.off-canvas-menu .username {
+    color: #FFF;
+    display: block;
+    padding: 0.3rem 0.9375rem;
 }
