Message font size increase

--- a/client/css/modules/_messages.scss
+++ b/client/css/modules/_messages.scss
@@ -8,6 +8,7 @@
 	background-repeat: no-repeat;
 	background-position: right top;
     font-family: "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
+    font-size: 0.875rem;
     padding: 11px 40px 13px 20px;
     border-radius: 0;
     text-align: left;
