--- a/client/css/modules/_pages.scss
+++ b/client/css/modules/_pages.scss
@@ -2,6 +2,7 @@
     min-height: 100%;
     width: 100%;
     color: #555555;
+    background-color: #FFF;
 }
 
 .page-content{
@@ -21,12 +22,12 @@
     content: none; /* Foundation row clearing causing animation bugs in page transitions */
 }
 
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 568px)
-and (-webkit-min-device-pixel-ratio: 2) {
+// @media only screen
+// and (min-device-width : 320px)
+// and (max-device-width : 568px)
+// and (-webkit-min-device-pixel-ratio: 2) {
 
-    .page {
-        min-height: 100%;
-    }
-}
+//     .page {
+//         min-height: 100%;
+//     }
+// }
