--- a/client/views/footer.html
+++ b/client/views/footer.html
@@ -1,10 +1,9 @@
-<div class="page-footer">
+<div class="row">
 
-    <div class="row">
-
-        <div class="columns medium-8">MEAN Seed created by <a href="https://github.com/ppuleo" target="_blank">Phil Puleo</a>, <a href="https://github.com/filbot" target="_blank">Filip Adamczyk</a>, and <a href="https://github.com/ericsond" target="_blank">Ericson de Jesus</a></div>
-        <div class="columns medium-4">Help and bug reports on <a href="https://github.com/ppuleo/mean-seed" target="_blank">github</a></div>
-
+    <div class="columns medium-8">
+        <p>Code licensed under the <a href="http://opensource.org/licenses/MIT" target="_blank">MIT License</a></p></div>
+    <div class="columns medium-4 text-right">
+        <p>Built by <a href="http://phillippuleo.com">Phil Puleo</a></p>
     </div>
 
 </div>
