Remove import for foundation settings sass partial. Relative path not being correctly resolved by grunt sass task.

--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -3,7 +3,7 @@
  */
 
 /* Foundation */
-@import "../lib/foundation/scss/foundation/settings";
+//@import "../lib/foundation/scss/foundation/settings"; - remove unless used
 @import "../lib/foundation/scss/normalize";
 @import "../lib/foundation/scss/foundation";
 
