--- a/client/index.ejs
+++ b/client/index.ejs
@@ -46,7 +46,7 @@
 
     <!-- Vendor Libraries -->
     <!-- build:js js/vendor.js -->
-    <script src="lib/jquery/jquery.min.js"></script>
+    <script src="lib/jquery/dist/jquery.min.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-sanitize/angular-sanitize.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
